--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,11 +9,11 @@
 <h3>Review for <%= @restaurant.name %></h3>
 <ul class="list-group">
   <% @restaurant.reviews.each do |review| %>
-    <li class="list-group-item"> <%= review.rating %> ⭐️- <%= review.content %></li>
+    <li class="list-group-item"> <%= '⭐️' * (review.rating) %> - <%= review.content %></li>
   <% end %>
 </ul>
 
 
 
-<p><%= link_to "Create a review for this restaurant", new_restaurant_review_path(@restaurant) %></p>
-<p><%= link_to "Back to List", restaurants_path %></p>
+<p><%= link_to "Create a review for this restaurant", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %></p>
+<p><%= link_to "Back to List", restaurants_path, class: "btn btn-primary" %></p>
